株式価格の登録処理追加
